--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "black>=25.1.0",
+    "numba>=0.61.2",
     "open3d>=0.19.0",
     "scikit-image>=0.25.2",
+    "scipy>=1.16.0",
     "torch>=2.7.1",
     "tqdm>=4.67.1",
 ]
